--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,15 @@
 ::-webkit-scrollbar {
     width: 7px;
- }
- 
- ::-webkit-scrollbar-track {
+}
+
+::-webkit-scrollbar-track {
     background: #cfcfcf;
- }
- 
- ::-webkit-scrollbar-thumb {
+}
+
+::-webkit-scrollbar-thumb {
     background: #a5a5a5;
- }
- 
- * {
-    text-decoration: none;
- }
+}
+
+* {
+    text-decoration: 'none';
+}
